# vectorlessrag

./: .gitignore  README.md  cli.py  install.sh  pyproject.toml  requirements.txt  vectorlessrag.py
api/: api.py  dockerfile  requirements.txt
chat/: chat.py
core/: config.py
indexer/: indexer.py
llms/: base.py  claude_llm.py  gemini_llm.py  ollama_llm.py  openai_llm.py
parsers/: dockerfile  pdf_parser.py  requirements.txt
prompts/: __init__.py  indexer_prompt.py  parser_prompt.py  retriever_prompt.py  wiki_builder_prompt.py
retrievers/: retriever.py
vectorlessrag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wiki/: wiki_builder.py
